## Makefile.am -- Process this file with automake to process Makefile.in
## gfx
 
SUBDIRS = creature icon misc object screen tile

ironhells_files = \
	background.png \
	button.png \
	life-bar.png \
	lmx-deco.png \
	mana-bar.png \
	splash.png \
	title.png \
	xp-bar.png
    
EXTRA_DIST = \
	$(ironhells_files)
       
ironhellsdir = @DATA_PATH@gfx
        
ironhells_DATA = \
	$(ironhells_files)

