## Makefile.am -- Process this file with automake to process Makefile.in

ironhells_files = \
	artifact.txt \
	cost_adj.txt \
	ego_item.txt \
	flavor.txt \
	limits.txt \
	monster.txt \
	object.txt \
	p_class.txt \
	p_hist.txt \
	p_race.txt \
	shop_own.txt \
	terrain.txt \
	vault.txt

EXTRA_DIST = \
	$(ironhells_files)

ironhellsdir = @DATA_PATH@lib/edit

ironhells_DATA = \
	$(ironhells_files)

