## Makefile.am -- Process this file with automake to process Makefile.in

angband_files = \
  artifact.txt \
  cost_adj.txt \
  ego_item.txt \
  flavor.txt \
  limits.txt \
  monster.txt \
  object.txt \
  p_class.txt \
  p_hist.txt \
  p_race.txt \
  quest.txt \
  shop_own.txt \
  terrain.txt \
  uniq_art.txt \
  vault.txt

EXTRA_DIST = $(angband_files)

angbanddir = $(datadir)/games/$(PACKAGE)/edit

angband_DATA = $(angband_files)
