## Makefile.am -- Process this file with automake to process Makefile.in

angband_files = \
	aname.txt chainswd.txt crime.txt dead.txt \
	death.txt elvish.txt error.txt mondeath.txt \
	monfear.txt monfrien.txt monspeak.txt news.txt \
	rumors.txt silly.txt timefun.txt timenorm.txt \
	aname_j.txt chainswd_j.txt crime_j.txt dead_j.txt \
	death_j.txt elvish_j.txt error_j.txt mondeath_j.txt \
	monfear_j.txt monfrien_j.txt monspeak_j.txt news_j.txt \
	rumors_j.txt silly_j.txt timefun_j.txt timenorm_j.txt \
	sname.txt nname.txt

EXTRA_DIST = \
  $(angband_files)

if SET_GID
angbanddir = @DEFAULT_PATH@file

angband_DATA = \
  $(angband_files)
endif

