## Makefile.am -- Process this file with automake to process Makefile.in

ironhells_files = \
	help.hlp attack.txt birth.txt command.txt \
	dungeon.txt general.txt option.txt playing.txt \
	version.txt

EXTRA_DIST = \
	$(ironhells_files)

ironhellsdir = @DATA_PATH@lib/help

ironhells_DATA = \
	$(ironhells_files)

