## Makefile.am -- Process this file with automake to process Makefile.in

SUBDIRS = orig

angband_files = \
  angdesc.txt \
  attribut.txt \
  basctask.txt \
  birth.txt \
  charattr.hlp \
  charscrn.txt \
  cmddesc.txt \
  cmdlist.txt \
  combat.hlp \
  combat.txt \
  command.hlp \
  defence.txt \
  dungeon.txt \
  equip.txt \
  explore.hlp \
  general.hlp \
  help.hlp \
  macro.txt \
  magic.txt \
  monpwr.txt \
  monrace.txt \
  objs-mon.txt \
  options.txt \
  overview.txt \
  pets.txt \
  posfaq.txt \
  pref.txt \
  quests.txt \
  raceclas.txt \
  resource.txt \
  symbols.txt \
  town.txt \
  tutorial.txt

EXTRA_DIST = $(angband_files)

angbanddir = $(datadir)/games/$(PACKAGE)/help

angband_DATA = $(angband_files)
