## Makefile.am -- Process this file with automake to process Makefile.in

angband_files = \
  feat-x11.prf \
  flvr-dvg.prf \
  flvr-new.prf \
  flvr-xxx.prf \
  font-ami.prf \
  font-dos.prf \
  font-ibm.prf \
  font-mac.prf \
  font-win.prf \
  font-x11.prf \
  font-xxx.prf \
  font.prf \
  graf-ami.prf \
  graf-dvg.prf \
  graf-gcu.prf \
  graf-ibm.prf \
  graf-lsl.prf \
  graf-mac.prf \
  graf-new.prf \
  graf-win.prf \
  graf-x11.prf \
  graf-xxx.prf \
  graf.prf \
  message.prf \
  pref-acn.prf \
  pref-ami.prf \
  pref-dos.prf \
  pref-emx.prf \
  pref-gcu.prf \
  pref-mac.prf \
  pref-win.prf \
  pref-x11.prf \
  pref.prf \
  user-mac.prf \
  user.prf \
  xtra-dvg.prf \
  xtra-new.prf \
  xtra-xxx.prf

EXTRA_DIST = $(angband_files)

angbanddir = $(datadir)/games/$(PACKAGE)/pref

angband_DATA = $(angband_files)
