## Makefile.am -- Process this file with automake to process Makefile.in
## gfx/creature

SUBDIRS = player
 
ironhells_files = \
	MANIFEST \
	boil-covered-wretch.png \
	farmer-maggot.png \
	mangy-looking-leper.png \
	player.png \
	scruffy-looking-hobbit.png \
	singing-happy-drunk.png
    
EXTRA_DIST = \
	$(ironhells_files)
       
ironhellsdir = @DATA_PATH@gfx/creature
        
ironhells_DATA = \
	$(ironhells_files)

