## Makefile.am -- Process this file with automake to process Makefile.in
## gfx/icon

SUBDIRS = large medium small

ironhells_files = \
	alchemist.png \
	armory.png \
	black-market.png \
	general-store.png \
	home.png \
	magic-shop.png \
	tavern.png \
	temple.png \
	weapon-smith.png

EXTRA_DIST = \
	$(ironhells_files)

ironhellsdir = @DATA_PATH@gfx/icon

ironhells_DATA = \
	$(ironhells_files)


