## Makefile.am -- Process this file with automake to process Makefile.in
## gfx/tile

ironhells_files = \
	MANIFEST \
	grass.png \
	acid.png \
	cracked-sand.png \
	cracked-stone.png \
	dark-sand.png \
	dark-stone.png \
	grass.png \
	heavy-acid-stone.png \
	heavy-lava-stone.png \
	lava.png \
	light-acid-stone.png \
	light-lava-stone.png \
	light-sand.png \
	light-stone.png \
	medium-acid-stone.png \
	medium-lava-stone.png \
	swamp.png \
	water.png \
	wliderness.png

EXTRA_DIST = \
	$(ironhells_files)

ironhellsdir = @DATA_PATH@gfx/tile

ironhells_DATA = \
	$(ironhells_files)

