## Makefile.am -- Process this file with automake to process Makefile.in
## gfx/tile

ironhells_files = \
	MANIFEST \
	wall-light.png \
	wall-medium.png \
	wall-dark.png \
	ground-grey-light.png \
	ground-grey-medium.png \
	ground-grey-dark.png \
	stairs-up.png \
	stairs-down.png


EXTRA_DIST = \
	$(ironhells_files)

ironhellsdir = @DATA_PATH@gfx/tile

ironhells_DATA = \
	$(ironhells_files)

