## Makefile.am -- Process this file with automake to process Makefile.in

angband_files = \
  10x20.bmp \
  12x24.bmp \
  5x8.bmp \
  6x10.bmp \
  6x12.bmp \
  6x13.bmp \
  6x13b.bmp \
  6x9.bmp \
  7x13.bmp \
  7x13b.bmp \
  8x13.bmp \
  8x13b.bmp \
  9x15.bmp \
  9x15b.bmp \
  10x20.fon \
  12x24.fon \
  5x8.fon \
  6x10.fon \
  6x12.fon \
  6x13.fon \
  6x13b.fon \
  6x9.fon \
  7x13.fon \
  7x13b.fon \
  8x13.fon \
  8x13b.fon \
  9x15.fon \
  9x15b.fon

EXTRA_DIST = $(angband_files)

angbanddir = $(datadir)/games/$(PACKAGE)/xtra/font

angband_DATA = $(angband_files)
