## Makefile.am -- Process this file with automake to process Makefile.in
# lib/xtra/graf
                                                                                
ironhells_files = \
	16x16.bmp \
	8X8.bmp \
	8x13.bmp \
	backgrnd.bmp \
	mask.bmp
	
EXTRA_DIST = \
	$(ironhells_files)
	
ironhellsdir = @DATA_PATH@xtra/graf

ironhells_DATA = \
	$(ironhells_files)

